attempted to fix image overflow

--- a/css/main.css
+++ b/css/main.css
@@ -4,19 +4,15 @@ html {
   background-color: #495562;
 }
 
-img {
-  max-height: 500px;
-}
-
 .btn {
   background-color: #495562;
-  border: 2px solid #97a49b;
+  border: 3px solid #97a49b;
 }
 
 .btn:hover {
   background-color: #fff;
   color: #97a49b;
-  border: 2px solid #fff;
+  border: 3px solid #fff;
 }
 
 div div {
@@ -36,7 +32,7 @@ div div {
   .btn {
     background-color: transparent;
     color: #efefef;
-    border: 2px solid #efefef;
+    border: 3px solid #efefef;
     float: right;
     margin-top: 5em;
   }
